--- a/ProyectoCinepolis/src/main/java/presentacion/frmInicioSesion.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/frmInicioSesion.form
@@ -244,6 +244,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="adminRuta"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
